<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="116dp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/headingConstraint"
            android:background="@color/colorPrimary">

        <ImageView
                android:layout_width="@dimen/profilePicWidth"
                android:layout_height="@dimen/profilePicHeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="8dp"
                android:id="@+id/profilePicture"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/pictureDescription"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/profilePicture"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                style="@style/HeadingTextView"
                android:text="@string/headingText"
                android:id="@+id/heading"/>

    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/headingConstraint"
            android:id="@+id/detailsConstraint">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/CategoryText"
                android:text="@string/full_name"
                android:id="@+id/fullName"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Text"
                android:text="@string/myName"
                android:id="@+id/myName"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fullName"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/CategoryText"
                android:text="@string/date_of_birth"
                android:id="@+id/dateOfBirth"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/myName"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/Text"
                android:id="@+id/date"
                android:text="@string/dateOfBirth"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateOfBirth"
                app:layout_constraintLeft_toLeftOf="parent"
                style="@style/CategoryText"
                android:text="@string/place_of_birth"
                android:id="@+id/placeOfBirth"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/date"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/Text"
                android:text="@string/placeOfBirth"
                android:id="@+id/myPlaceOfBirth"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/mailMeButton"
            style="@style/SummaryText"
            android:text="@string/summaryText"/>


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/mailButtonText"
            style="@style/HeadingTextView"
            android:id="@+id/mailMeButton"/>



</android.support.constraint.ConstraintLayout>
